Обновление ТЗ 5. Добавлены тесты по ТЗ.